--- a/css/children.css
+++ b/css/children.css
@@ -2,6 +2,7 @@
 *{
   margin:0 0 ;
   padding:0;
+  
 
 }
 
@@ -12,6 +13,8 @@
     overflow: hidden;
     background:#001233;
     box-sizing: border-box ;
+    background-image: url('/images/black-worn-metal-plate-steel-texture-dark-aluminum-background-black-worn-metal-plate-steel-texture-dark-aluminum-background-154179243.jpg');
+    background-size: cover;
 
 }
 .navbar{
