--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,75 @@
+* {
+    margin: 0 0;
+    padding: 0;
 
-*{
-    margin:0 0 ;
-    padding:0;
-   
 }
+
 .dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: gray;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px;
-    padding: 5px  1px;
-  
-  }
-  
-  .dropdown:hover .dropdown-content {
+    padding: 5px 1px;
+
+}
+
+.dropdown:hover .dropdown-content {
     display: block;
-  }
-  .dropdown-content a {
+}
+
+.dropdown-content a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-  
+
+}
 
 
-.welcome{
+
+.welcome {
     text-align: center;
     padding: 30px;
     color: white;
     font-style: italic;
     font-family: Carattere;
+    /* background-image: url('/images/pngtree-clothing-girl-fashion-snatch-image_16573.jpg'); */
+    background-size: cover;
+    height: 300px;
 }
-.welcome p{
+
+.welcome p {
     margin-top: 30px;
     font-size: 30px;
     font-family: monospace;
+    font-weight: bolder;
+    text-transform: capitalize;
+
 }
-.h2{
+
+.h2 {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 0px;
     text-transform: uppercase;
     font-family: monospace;
-    color: whitesmoke
+    color: whitesmoke;
+    font-size: 30px;
+    padding-top: 40px;
 }
-#h3{
+
+#h3 {
     text-transform: uppercase;
     font-size: 25px;
     color: white
 }
+
 .button {
     background-color: #4CAF50;
     border: none;
@@ -70,8 +84,8 @@
     cursor: pointer;
     width: 66%;
     margin-left: 170px;
-    
-  }
+
+}
 
 
 
@@ -87,12 +101,14 @@
 
 .slider img:hover {
     transform: scale(1.05);
-  
+
 }
+
 .slide {
 
     position: relative;
 }
+
 .slide img {
     height: 100%;
     width: 250px;
@@ -100,59 +116,79 @@
     object-fit: cover;
     border-radius: 15px;
     cursor: pointer;
-  
+
 }
 
 @media only screen and (max-width: 420px) {
- 
+
     .slide {
         padding: 16px 10px;
-   }
+    }
+
     .slide img {
         margin-left: 10px;
-   }
+    }
 }
 
-.about{
+.about {
 
     color: white;
+    background-image: url('/images/pexels-photo-994517.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.all-contact{
+
+.header {
+    background: url('/images/italian-bag-fashion-shop-italy-18176484.jpg');
+
+}
+
+.all-contact {
     display: flex;
     padding: 16px;
     justify-content: space-between;
 }
-#help, #email, #box{
+
+#help,
+#email,
+#box {
     margin-top: 25px;
 }
-.help-center p{
+
+.help-center p {
     margin-top: 20px;
 }
-.help-center p a{
+
+.help-center p a {
     text-decoration: none;
     margin-top: 100px;
     color: whitesmoke;
     padding-top: 20px;
 }
-.company{
+
+.company {
     margin-right: 100px;
 }
-.company p{
+
+.company p {
     margin-top: 20px;
 }
-.company p a{
+
+.company p a {
     margin-top: 10px;
-   
+
     color: white;
     text-decoration: none;
 }
-form{
+
+form {
     margin-left: 40%;
 }
-.subscribe{
+
+.subscribe {
     padding-top: 100px;
 }
- 
+
 .fa {
     padding: 20px;
     font-size: 15px;
@@ -161,103 +197,113 @@ form{
     text-decoration: none;
     margin: 5px 2px;
     border-radius: 50%;
-  }
-  
-  .fa:hover {
-      opacity: 0.7;
-  }
-  
-  .fa-facebook {
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
     background: #3B5998;
     color: white;
-  }
-  
-  .fa-twitter {
+}
+
+.fa-twitter {
     background: #55ACEE;
     color: white;
-  }
-  
-  .fa-google {
+}
+
+.fa-google {
     background: #dd4b39;
     color: white;
-  }
-  
-  .fa-linkedin {
+}
+
+.fa-linkedin {
     background: #007bb5;
     color: white;
-  }
-  
-  .fa-youtube {
+}
+
+.fa-youtube {
     background: #bb0000;
     color: white;
-  }
-  
-  .fa-instagram {
+}
+
+.fa-instagram {
     background: #125688;
     color: white;
-  }
+}
 
-  .container{
+.container {
 
     min-height: 100vh;
-    padding: 1% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
     overflow: hidden;
-    background:#001233;
-    box-sizing: border-box ;
+    background: #001233;
+    box-sizing: border-box;
+    /* background: url('/images/italian-bag-fashion-shop-italy-18176484.jpg'); */
+    /* background-image: url('/images/Nairobi-Fashion-Hub-Top-10-Fashion-Store-in-Kenya-scaled.jpg'); */
 
 }
-.navbar{
+
+.navbar {
     width: 100%;
     display: flex;
     align-items: center;
 }
 
 
-#name{
+#name {
     color: white;
     margin-left: 20px;
 }
 
-nav{
-    flex:1;
+nav {
+    flex: 1;
     text-align: right;
 }
-nav ul li{
+
+nav ul li {
     list-style-type: none;
     display: inline-block;
-    margin-right:30px;
+    margin-right: 30px;
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 20px;
 }
-nav ul li a:hover{
+
+nav ul li a:hover {
     color: rgb(253, 7, 40);
-    
+
 }
+
 .dropdown {
     position: relative;
     display: inline-block;
     color: white;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
-    
-    min-width: 50px;
-    padding: 5px  1px;
-    color: white;
-   
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  .collection{
-      margin-top: 50px;
-      margin-left: 15px;
-  }
 
-  
+    min-width: 50px;
+    padding: 5px 1px;
+    color: white;
+
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.collection {
+    margin-top: 0px;
+    margin-left: 15px;
+}
+
+.collections {
+    background: url('/images/black-worn-metal-plate-steel-texture-dark-aluminum-background-black-worn-metal-plate-steel-texture-dark-aluminum-background-154179243.jpg');
+}
