--- a/css/children.css
+++ b/css/children.css
@@ -13,7 +13,7 @@
     overflow: hidden;
     background:#001233;
     box-sizing: border-box ;
-    background-image: url(/images/black-worn-metal-plate-steel-texture-dark-aluminum-background-black-worn-metal-plate-steel-texture-dark-aluminum-background-154179243.jpg);
+    background-image: url('../images/black-worn-metal-plate-steel-texture-dark-aluminum-background-black-worn-metal-plate-steel-texture-dark-aluminum-background-154179243.jpg');
     background-size: cover;
 
 }
